compiler-java/test/src/com/redhat/ceylon/compiler/java/test/issues/bug15xx/Bug1583.ceylon
shared alias Bug1583Mixer => Integer(Integer)(Integer,Integer);

doc ("Nice stuff")
see (`alias Bug1583Mixer`)  //error
shared object mixers { 
}